Fix sidebar to render off-screen instead of pushing content

--- a/source/stylesheets/application.css
+++ b/source/stylesheets/application.css
@@ -73,8 +73,29 @@ input[type="radio"], input[type="checkbox"] {
 
 /* Sidebar */
 #sidebar {
-  @apply text-gray-500 bg-gray-800 pb-24 w-full w-64;
+  @apply text-gray-500 bg-gray-800 pb-24 w-64 fixed top-0 left-0 h-full z-50 transform transition-transform duration-300 ease-in-out;
   min-width: 280px;
+}
+
+#sidebar.hidden {
+  @apply -translate-x-full;
+}
+
+#sidebar:not(.hidden) {
+  @apply translate-x-0;
+}
+
+/* Sidebar Overlay */
+#sidebar-overlay {
+  @apply fixed inset-0 bg-black bg-opacity-50 z-40 transition-opacity duration-300 ease-in-out;
+}
+
+#sidebar-overlay.hidden {
+  @apply opacity-0 pointer-events-none;
+}
+
+#sidebar-overlay:not(.hidden) {
+  @apply opacity-100;
 }
 
 /* Cards */
